--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,12 @@
 }
 
 #intro-wrapper {
-	width: 960px;
+	width: 800px;
 	margin: 0 auto;
 }
 
 #intro-list {
-	margin-top: 40%;
+	margin-top: 60%;
 	height: 150px
 }
 
@@ -30,8 +30,8 @@
 	height: 100px;
 	background-color: #fff;
 	text-align: center;
-	font-size: 100px;
-	font-family: corpulent-web,fantasy;
+	font-size: 80px;
+	font-family: 'Chango', cursive;
 	font-style: normal;
 	font-weight: 400;
 	color: #000;
@@ -42,6 +42,13 @@
 	list-style: none;
 	margin: 0px;
 	padding: 0px;
-	width: 750px;
+	width: 800px;
 	height: 100px;
+}
+
+.letters {
+	position: absolute;
+	top: 4px;
+	left: 16px;
+	z-index: 2;
 }
