--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
-
+body {
+	font-family: proxima-nova,sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	color: #515047;
+	background-color: #eee;
+}
 
 #intro {
 	background: url('../img/bg.jpg') no-repeat center center fixed;
@@ -79,3 +85,97 @@
 	text-decoration: none;
 }
 
+#loader {
+	position: absolute;
+	display: none;
+	z-index: 200;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	height: 15px;
+}
+
+#loader img {
+	padding: 2px;
+	height: 15px;
+}
+
+#main-spacer {
+	height: 75px;
+}
+
+#about {
+	padding-bottom: 20px;
+}
+
+@media screen and (min-width: 980px)
+#about {
+	max-width: 1600px;
+	margin: 0 auto;
+	padding-top: 10px;
+	overflow: hidden;
+	width: 960px;
+}
+
+#about h1 {
+	font-size: 42px;
+	font-weight: 200;
+	text-align: center;
+}
+
+#about-list {
+	list-style: none !important;
+	margin: 0px !important;
+	padding: 0px !important;
+}
+
+#about h2 {
+	border-bottom: 1px dashed #ccc;
+	margin-bottom: 20px;
+	padding-bottom: 5px;
+}
+
+#about-list li {
+	width: 220px;
+	padding-left: 20px;
+	float: left;
+}
+
+header {
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+	background-color: #fff;
+	position: fixed;
+	z-index: 100;
+}
+
+#header-close {
+	position: fixed;
+	top: 10px;
+	right: 20px;
+	display: none;
+	opacity: 0.3;
+}
+
+#logo {
+	font-family: 'Chango', cursive;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 40px;
+	padding: 5px 10px 0px 10px;
+	color: #000;
+	display: none;
+}
+
+::selection {
+	background: #ff0066;
+	color: #fff;
+	text-shadow: none;
+}
+
+.nav-on {
+	color: #666 !important;
+	background-color: #ffff00 !important;
+}
