--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
 #about {
 	max-width: 1600px;
 	margin: 0 auto;
-	padding-top: 10px;
+	padding-top: 100px;
 	overflow: hidden;
 	width: 960px;
 }
@@ -131,6 +131,8 @@ body {
 	list-style: none !important;
 	margin: 0px !important;
 	padding: 0px !important;
+  display: flex;
+  justify-content: space-around;
 }
 
 #about-image {
@@ -155,8 +157,7 @@ body {
 }
 
 #about a {
-	background-color: #ff0066;
-	color: #fff;
+	color: #ff0066;
 }
 
 header {
